--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
   </header>
 
   <!-- ======= Sección principal (Hero) ======= -->
-  <section id="inicio" class="hero">
-    <div class="hero-content">
-      <h1>Impulso exponencial,<br>soluciones reales.</h1>
-      <p>Desarrollamos soluciones inteligentes para la industria automotriz y manufacturera.</p>
-      <a href="#servicios" class="btn-cta">Conoce nuestras soluciones</a>
-    </div>
-  </section>
+<section id="inicio" class="hero"
+  style="background:
+    linear-gradient(rgba(8,29,46,0.55), rgba(8,29,46,0.55)),
+    url('img/fondo-tecnologia.png') center center / cover no-repeat;
+    background-attachment: fixed;">
+  <div class="hero-content">
+    <h1>Impulso exponencial,<br>soluciones reales.</h1>
+    <p>Desarrollamos soluciones inteligentes para la industria automotriz y manufacturera.</p>
+    <a href="#servicios" class="btn-cta">Conoce nuestras soluciones</a>
+  </div>
+</section>
 
 <!-- ======= SECCIÓN SERVICIOS ======= -->
 <section id="servicios" class="servicios">
@@ -217,4 +221,5 @@ document.querySelectorAll('.tarjeta.carrusel').forEach(carrusel => {
 
 </body>
 </html>
+
 
