--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>E²A Systems</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="img/logo.png">
+  <link rel="icon" type="image/png" href="Cabecera.png">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -221,5 +221,6 @@ document.querySelectorAll('.tarjeta.carrusel').forEach(carrusel => {
 
 </body>
 </html>
+
 
 
